k8s/worker-extractor-weworkremotely.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extractor-weworkremotely
  labels:
    app: extractor-weworkremotely
    app.kubernetes.io/name: extractor-weworkremotely
    app.kubernetes.io/component: extractor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: extractor-weworkremotely
  template:
    metadata:
      labels:
        app: extractor-weworkremotely
    spec:
      containers:
        - name: extractor-weworkremotely
          image: analizzatore-registry.localhost:5000/extractor-weworkremotely:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
