k8s/worker-pdf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-pdf
  labels:
    app: backend-pdf
    app.kubernetes.io/name: backend-pdf
    app.kubernetes.io/component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-pdf
  template:
    metadata:
      labels:
        app: backend-pdf
    spec:
      containers:
        - name: backend-pdf
          image: analizzatore-registry.localhost:5000/worker-pdf:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 150m
              memory: 384Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
